cmake_minimum_required(VERSION 3.2)
#include(FindCUDA)
#if(CUDA_FOUND)
	project(life LANGUAGES C CXX CUDA)
	set(SRCS cell.cxx life.cu main.c disp.c)
#else ()
#	project(life LANGUAGES C CXX)
#	set(SRCS cell.cxx life.cxx main.c disp.c)
#endif ()

find_package(SDL2 REQUIRED)

include_directories("${CMAKE_SOURCE_DIR}" "${SDL2_INCLUDE_DIRS}")
link_libraries(${SDL2_LIBRARIES})
add_executable(life ${SRCS})
